[project]
name = "bills-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.10",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
